--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'config.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.11' //1.2.61
+    ext.is_build_module = true
     repositories {
+        //maven { url "http://192.168.2.9:8081/nexus/content/groups/android_group/" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
-        jcenter()
-        
+        mavenCentral()
+        maven {
+            url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        //classpath "io.realm:realm-gradle-plugin:5.9.1" //Realm 3.7.2
     }
 }
 
 allprojects {
     repositories {
+        //maven { url "http://192.168.2.9:8081/nexus/content/groups/android_group/" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
-        jcenter()
-        
+        maven { url 'https://www.jitpack.io' }
+        maven {
+            url uri('http://maven.qingting.fm/')
+        }
     }
 }
 
