--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,35 +1,131 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+
     defaultConfig {
-        applicationId "com.chia.app"
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        applicationId rootProject.ext.android.applicationId
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        versionCode rootProject.ext.android.versionCode
+        versionName rootProject.ext.android.versionName
+
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    sourceSets
+            {
+                main {
+                    jniLibs.srcDirs = ['src/main/jniLibs']
+                }
+            }
+    signingConfigs {
+        release {
+            storeFile file(project.property('keyStore'))
+            storePassword project.property('keyStorePassword')
+            keyAlias project.property('keyAlias')
+            keyPassword project.property('keyAliasPassword')
+        }
+        debug {
+            storeFile file(project.property('keyStore'))
+            storePassword project.property('keyStorePassword')
+            keyAlias project.property('keyAlias')
+            keyPassword project.property('keyAliasPassword')
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
+    dataBinding {
+        enabled true
+    }
+    compileOptions {
+        targetCompatibility rootProject.ext.android.targetCompatibility
+        sourceCompatibility rootProject.ext.android.sourceCompatibility
+    }
+    kapt {
+        generateStubs = true
+        arguments {
+            arg("moduleName", project.getName())
+            arg('eventBusIndex', 'com.chia.app.EventBusIndex')
+        }
+    }
+    sourceSets {
+        main {
+            java.srcDirs += 'src/main/kotlin'
+        }
+    }
+
+    android.applicationVariants.all { variant ->
+        // 更新至Android Studio 3.3 gradle 4.10.1
+        variant.outputs.all {
+            outputFileName = "ProjectFramework_v${variant.versionName}_${releaseTime()}_${variant.buildType.name}.apk"
+        }
+    }
+
+    /*repositories {
+        flatDir {
+            dirs project(':lib.frame').file('libs')
+        }
+    }*/
+
+}
+
+def releaseTime() {
+    return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation rootProject.ext.dependencies.constraint_layout
+    testImplementation rootProject.ext.dependencies.junit
+    androidTestImplementation rootProject.ext.dependencies.runner
+    androidTestImplementation rootProject.ext.dependencies.espresso_core
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //kapt "com.android.databinding:compiler:$android_plugin_version"
+    implementation rootProject.ext.dependencies.supportv7
+    implementation rootProject.ext.dependencies.supportv4
+    implementation rootProject.ext.dependencies.cardviewv7
+    implementation rootProject.ext.dependencies.design
+    implementation rootProject.ext.dependencies.constraint_layout
+    implementation rootProject.ext.dependencies.multidex
+    implementation rootProject.ext.dependencies.RotateCircleImageView
+    //ARouter
+    implementation rootProject.ext.dependencies.arouter_api
+    kapt rootProject.ext.dependencies.kotlin_arouter_compiler
+    implementation rootProject.ext.dependencies.PickerView
 
-//    implementation project(':lib.network')
+    kapt rootProject.ext.dependencies.eventbus_processor
+    implementation rootProject.ext.dependencies.materialfavoritebutton
+    //LeakCanary
+    debugImplementation rootProject.ext.dependencies.leakcanary
+    releaseImplementation rootProject.ext.dependencies.leakcanary_no_op
+    implementation rootProject.ext.dependencies.ultra_pager
+    implementation rootProject.ext.dependencies.DropDownMenu
+    implementation rootProject.ext.dependencies.glide_transformations
+
+    implementation 'fm.qingting.open.android:qtsdk:1.7.1'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    /*if (!rootProject.ext.is_build_module) {
+        implementation project(':app.movie')
+    }
+
+    implementation project(':lib.frame')
+    implementation project(':lib.network')
+    //implementation project(':lib.bean')
+    implementation project(':lib.mvvm')
+    implementation project(':lib.style')*/
 }
