--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,9 @@
 apply from: 'config.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.11' //1.2.61
+    ext.kotlin_version = '1.3.11'
     ext.is_build_module = false
     repositories {
-        //maven { url "http://192.168.2.9:8081/nexus/content/groups/android_group/" }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
@@ -23,7 +22,6 @@ buildscript {
 
 allprojects {
     repositories {
-        //maven { url "http://192.168.2.9:8081/nexus/content/groups/android_group/" }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
